# obs-rs

./: Cargo.toml  README.md  build.rs
libobs-sys/: Cargo.toml
src/: error.rs  lib.rs
src/core/source/: mod.rs
src/types/: mod.rs
