[package]
name = "obs"
version = "0.1.0"
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Safe bindings libOBS (Open Broadcasting Software)"
keywords = ["bindings", "obs", "streaming", "twitch"]
categories = ["api-bindings", "multimedia"]
repository = "https://github.com/OtaK/obs-rs"
edition = "2018"

[dependencies]

[dependencies.libobs-sys]
path = "libobs-sys"
version = "0.1.0"
